[package]
name = "cdp-html-shot"
version = "0.1.18"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Nawyjx <3373167460@qq.com>"]
documentation = "https://docs.rs/cdp-html-shot"
repository = "https://github.com/araea/cdp-html-shot"
keywords = ["html", "screenshot", "cdp", "html-to-image", "html2image"]
description = "A Rust library for capturing HTML screenshots using CDP."
categories = ["multimedia::images", "asynchronous", "web-programming::websocket", "web-programming"]

[[example]]
name = "take_shots"
path = "examples/take_shots.rs"

[[example]]
name = "shot_html"
path = "examples/shot_html.rs"

[[example]]
name = "static_instance"
path = "examples/static_instance.rs"
required-features = ["atexit"]

[[example]]
name = "shindan_to_img"
path = "examples/shindan_to_img.rs"

[[example]]
name = "tab_goto"
path = "examples/tab_goto.rs"

[dependencies]
anyhow = "1.0"
log = "0.4.22"
rand = "0.8.5"
ctrlc = "3.4.5"
which = "7.0"
regex = "1.11.1"
chrono = "0.4.38"
serde_json = "1.0"
futures = "0.3.31"
tempfile = "3.14.0"
futures-util = "0.3.31"
tokio-tungstenite = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[dev-dependencies]
base64 = "0.22.1"
shindan-maker = { version = "0.1", features = ["full"] }

[features]
default = []
full = ["atexit"]
atexit = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
